privacy policy corrected 4

--- a/src/main/assets/webapp/privacypolicy-ru.html
+++ b/src/main/assets/webapp/privacypolicy-ru.html
@@ -37,12 +37,12 @@
 
 <h4 align="center">Беижсофт™ ИСП локальные версии для Андроида и для прочих операционных систем.</h4>
 <p>Данные версии основаны на встроенном приватном Веб-сервере А-Джетти.
-  Данный приватный Веб-Сервер не доступен за пределами вашего компьютера или Андроид-устройства.
+  Данный приватный Веб-Сервер недоступен за пределами вашего компьютера или Андроид-устройства.
   Данные версии требуют авторизации с надежным паролем (вы сами создаете пароль, а программное обеспечение контролирует его надежность).
   Данные версии позволяют максимум 6 неудачных попыток авторизации.
   Доступ будет заблокирован на 15 минут в случае 6 неудачных попыток авторизации.
   Вам необходимо периодически проверять файл <b>logSec.log</b> хранящий информацию об авторизациях.
-  Данные версии используют современное шифрование данных проходящих от сервера к браузеру (HTTPS соединение) и обмениваемых файлов (базы данных и лог-файлов).
+  Данные версии используют современное шифрование данных передаваемых от сервера к браузеру (HTTPS соединение) и обмениваемых файлов (базы данных и лог-файлов).
   Данные версии позволяют работать с несколькими базами данных,
   Вы можете создавать, переключать, удалять и пересылать в шифрованном виде базы данных используя Веб-интерфейс.
   Вам лучше использовать шифрацию (Веб-интерфейс) для передачи базы данных на другой компьютер.
@@ -63,7 +63,7 @@
   Ваша  информация (SQLite базы данных), logStd.log, logSec.log, хранилище ключей шифрования находятся
   в месте недоступном другому программному обеспечению. Только данное приложение может читать и изменять эти данные.
   Если вы забудите пароль от хранилища ключей шифрования и (или) от входа в приложение, то вы потеряете вашу информацию.
-  Поэтому вам необходимо делать архивную шифрованную копию базы данных используя Веб-интерфейс.
+  Поэтому вам необходимо делать шифрованную копию базы данных используя Веб-интерфейс.
   Для этого необходима вторая локальная Беижсофт™ ИСП, установленная на другом компьютере или Андроид-устройстве.
   Публичный ключ шифрования от второй копии приложения используется для шифрования файлов,
   и лишь оно (чей публичный ключ использовался для шифрования) может расшифровать переданные файлы.
